# lucid

./: .gitignore  CLAUDE.md  Makefile
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
pomodoro/: SPEC.md  pyproject.toml
pomodoro/src/compos_mentis/: __init__.py  app.py  btop.tcss
