[project]
name = "compos-mentis"
version = "0.1.0"
description = "Pomodoro timer TUI — stay present, stay focused"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compos_mentis"]

[project.scripts]
compos-mentis = "compos_mentis:main"
