[project]
name = "compos-mentis"
version = "0.1.0"
description = "Pomodoro timer TUI — stay present, stay focused"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pytest>=8.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compos_mentis"]

[project.scripts]
compos-mentis = "compos_mentis:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
